--- a/src/template.yml
+++ b/src/template.yml
@@ -917,10 +917,10 @@ Resources:
     DependsOn: CatchOrgEvent
     Type: AWS::Lambda::Permission
     Properties:
-      FunctionName: !GetAtt CatchOrgEvent.arn
+      FunctionName: !Ref CatchOrgEvent
       Action: 'lambda:InvokeFunction'
       Principal: sns.amazonaws.com
-      
+
   PipelineCloudWatchEventRole:
       Type: AWS::IAM::Role
       Properties:
