--- a/src/template.yml
+++ b/src/template.yml
@@ -434,6 +434,10 @@ Resources:
             Resource:
               - !Sub "arn:aws:iam::${AWS::AccountId}:role/${CrossAccountAccessRoleName}"
               - !Sub "arn:aws:iam::${AWS::AccountId}:role/${CrossAccountAccessRoleName}-readonly"
+          - Effect: Allow
+            Action:
+              - events:PutEvents
+            Resource: !Sub "arn:aws:events:${AWS::Region}:${AWS::AccountId}:event-bus/default"
   CodeCommitRepository:
     Type: AWS::CodeCommit::Repository
     Properties:
